--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://db.onlinewebfonts.com/c/19b16f62a14ab3851710cff5d5b156b6?family=Sirichana+W31+Bold');
+
 @import "tailwindcss";
 
 
